# ChangeLog for media-plugins/whysynth
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*whysynth-20120903 (08 Sep 2012)

  08 Sep 2012; Gavin Pryke (gavlee) <gavinlee303@googlemail.com>
  -whysynth-20060122.ebuild, -whysynth-20060122-r1.ebuild,
  -whysynth-20070418.ebuild, -whysynth-20100922.ebuild,
  +whysynth-20120903.ebuild, -files/whysynth_hacked_eg.patch, metadata.xml:
  bump. remove 32 KiB patch. repoman clean.

*whysynth-20100922 (03 Mar 2011)

  03 Mar 2011; Frieder Buerzele <evermind@tuxfamily.org>
  -whysynth-20090608.ebuild, +whysynth-20100922.ebuild:
  bumped and added amd64 keyword

*whysynth-20090608 (25 Feb 2010)

  25 Feb 2010; Frieder Buerzele <evermind@tuxfamily.org>
  +whysynth-20090608.ebuild:
  brought to you by audiodef

  17 Dec 2007; Thomas Kuther <gimpel@sonnenkinder.org> ChangeLog:
  added a changelog
