@@ -1,4 +1,4 @@
 DIST whysynth-20120903.tar.bz2 2141470 SHA256 acc0a4c8df1c8f36619861dfa32e3d2850783d462e2afec50c2210b2e3dd8686 SHA512 3f7c5c4abf8ccf4bcc8044f98841db316e81e4dd32a037f97dd6ae2d7133cdef46d341a877ae10f834d617b0120071e2ed728e683c2a2f4f3cee4fc33304fbcd WHIRLPOOL 5c49f43ce8ecccbe4ffbeb3709ecdcf5ee4214c761d99854f4417b7730530445eb53a65866048963df0796934b2166e18696df747667acc89fefa0479076d4d4
-EBUILD whysynth-20120903.ebuild 683 SHA256 9c287a1b1b3e6fb0ae4d8c719ae80ff367efa749d574917d083a967da2812641 SHA512 f29979dadec22470a58348174fa8e61fe39c225e17477e6c0749f31f8984cfc354882510599048beb6bd4320c1fee49b1b79091f6fc8c8c8f9bc945b16f6c393 WHIRLPOOL 1f8c135186b5df747355c189efa85521d93a3fd64f571b332a93027ff7d64d0e9f1c60e809f36d0925b4cca5713f905808e0f0348988f5cbae9d97c7a2e2f3b2
-MISC ChangeLog 876 SHA256 a38fbdb05c5723d0b9b78d053eae7aa81396682943caf8f17c72bfda5697743d SHA512 be0883f24f0431872c9de36867d46f2052f66f459bec2038b9c4c87a63007d22c4cc8dafce8f7ef2bd8e38d32cda036a74ba5f33307fa2f4576b6ca36c1ced4b WHIRLPOOL d186bd733498da1bad1b571cde1862485c25b218c516e8fb1be5b097b3ee0d53e894dbe27fd00e05da34096a7fe79ea33ebff67b7826d0f1d82f3519e16ba6ed
+EBUILD whysynth-20120903.ebuild 636 SHA256 dae252a9fa57cbcc36910905abe17987879994994cc0d7a370fdff153b24b1e2 SHA512 ecc0ae2887f887160dcef522088cbcfcbb613ff205ca60cbe7144a1c82acfe1370e0462866249316367007c2b939de343f9b5a8c1707623d7a8279d5a011af30 WHIRLPOOL 83e3e8ab61f9fd07e052ec05d08b8be59735c3a4964007a8f045437c74a637400410b1dec2d6e96de916f095819f8e3bed10242e99df6bf4fe58566e7e0acf1e
+MISC ChangeLog 1170 SHA256 28f2a15311bc6212ded3484ca5d4a80ecede8b3dd187add4d7d80bebb9a91965 SHA512 8585dcd8fe55c6a999e52eb8b23edbb56978a515afb01ec197916c4ae81559a8ddefa325489a22322d0528086d5ef63254f9a923669ccaffe289ce0326848b94 WHIRLPOOL e448adb89e3782c6daa0f9e3c94f6e8ea0529d81fa131f2befb807f2e714088dcb4c7b69b99fcfe298c0b909ace8e54be6c4c80db7b649d0e9a6eae19bd2dc99
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
